# voxtype

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
app/: overlay.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: audio_capture.rs  dictation.rs  hotkey.rs  http_api.rs  lib.rs  main.rs  model_download.rs  overlay.rs  runtime_process.rs  settings.rs  text_output.rs  voice_ws.rs
app/src/components/: DownloadToast.tsx  HotkeyRecorder.tsx
app/src/lib/: hotkey-format.ts  useSettingsWindowSize.ts
catalog/: README.md  models.json
plugin/: ActionContextHelper.cs  InstallerDownload.cs  JsonResponseReader.cs  Launcher.cs  LauncherCommand.cs  VoxType.Plugin.csproj  VoxTypeClient.cs  qkref.props  voxtype-plugin-channel.json
runtime/: .gitignore  LICENSE  README.md  manifest.example.json  pyproject.toml  voxtype-runtime.spec
runtime/.github/workflows/: ci.yml  release.yml
runtime/models/: README.md  sensevoice-model-identity.json
runtime/packaging/: runtime_entry.py
runtime/publish/: .env.example  Publish-VoiceAsrRelease.ps1  Upload-VoiceAsrToBitiful.ps1  Write-VoicePluginChannelManifest.ps1  bitiful_upload.py
runtime/scripts/: build-win.ps1  download-hybrid-models.ps1  download_sensevoice_model.py  export-onnx-gguf-models.ps1  install-llama-cpp.ps1  package-model.ps1  package-release.ps1  package-runtime.ps1  test_engine_wav.py
runtime/src/voxtype_runtime/: __init__.py  __main__.py  config.py  download_model.py  model_bootstrap.py  paths.py  protocol.py  router.py  server.py  session.py  stdio_transport.py
runtime/src/voxtype_runtime/recognizer/: __init__.py  base.py  onnx_gguf.py  onnx_gguf_layout.py  sherpa_onnx.py  stub.py  third_party_bootstrap.py
runtime/tests/: test_config.py  test_download_model.py  test_model_bootstrap.py  test_onnx_gguf_layout.py  test_qwen_language_map.py  test_session_partial.py  test_websocket_session.py
scripts/: bootstrap-third-party.ps1  generate-icons.py  prepare-tauri-build.ps1  setup-quicker-action.ps1  test-streaming-partial-ws.py  validate-models-catalog.ps1  verify-local-release.ps1
