[project]
name = "voxtype-runtime"
version = "0.1.9"
description = "Local ASR server for VoxType (voxtype-voice-v1 WebSocket protocol)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VoxType contributors" }]
dependencies = [
    "aiohttp>=3.10.0",
    "numpy>=2.0.0",
    "sherpa-onnx==1.13.2+cuda",
]

[project.optional-dependencies]
sherpa = [
    "sherpa-onnx==1.13.2+cuda",
    "numpy>=2.0.0",
]
onnx-gguf = [
    "onnxruntime>=1.17.0",
    "scipy>=1.11.0",
    "gguf>=0.10.0",
    "rich>=13.0.0",
    "pypinyin>=0.50.0",
    "soundfile>=0.12.0",
    "srt>=3.5.0",
    "sentencepiece>=0.2.0",
    "pydub>=0.25.0",
]

[project.scripts]
voxtype-runtime = "voxtype_runtime.__main__:main"
download-asr-model = "voxtype_runtime.download_model:main"
download-sensevoice-model = "voxtype_runtime.download_model:main"
check-asr-model = "voxtype_runtime.download_model:check_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voxtype_runtime"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyinstaller>=6.0.0",
]

[[tool.uv.index]]
name = "sherpa-cuda"
url = "https://k2-fsa.github.io/sherpa/onnx/cuda.html"
format = "flat"

[tool.uv.sources]
sherpa-onnx = { index = "sherpa-cuda" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
